depends_compile_tests/tests/fail/derive/dependencies/union.rs
use depends::derives::Dependencies;

#[derive(Dependencies)]
union Bar {
    node1: usize,
    node2: usize,
}

fn main() {}
