depends_compile_tests/tests/fail/derive/dependencies/union.stderr
error: expected `struct`
 --> tests/fail/derive/dependencies/union.rs:4:1
  |
4 | union Bar {
  | ^^^^^
